[package]
name = "brane-ast"
rust-version = "1.81.0"
edition = "2021"
authors = [ "Tim Müller" ]
version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
console = "0.15.5"
enum-debug.workspace = true
lazy_static = "1.4.0"
log = "0.4.22"
uuid = { version = "1.7.0", features = ["serde", "v4"] }

brane-dsl = { path = "../brane-dsl" }
brane-shr = { path = "../brane-shr" }
specifications = { path = "../specifications" }

[lints]
workspace = true
