[package]
name = "brane-cfg"
rust-version = "1.85"
edition = "2021"
authors = ["Onno Valkering", "Tim Müller"]
version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
rustls-pemfile = "1.0.1"
x509-parser = "0.17.0"

# Workspace dependencies
async-trait.workspace = true
enum-debug.workspace = true
rustls.workspace = true
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

# Brane
specifications.workspace = true

[lints]
workspace = true
