[package]
name = "brane-prx"
edition = "2021"
authors = ["Tim Müller"]
rust-version = "1.85"
version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
never-say-never = "6.6.666"
socksx = { git = "https://github.com/braneframework/socksx", tag = "v2.0.1" }
tokio-rustls = "0.24.0"
url = "2.5.0"

# Workspace dependencies
anyhow.workspace = true
clap.workspace = true
dotenvy.workspace = true
error-trace.workspace = true
reqwest = { workspace = true, features = ["json"] }
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "signal"] }
tracing.workspace = true
warp.workspace = true

# Brane
brane-cfg.workspace = true
brane-tsk.workspace = true
specifications.workspace = true

[lints]
workspace = true
